--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harrier</title>
-    <link rel="icon" type="image/svg+xml" href="/harrier-bird-blue-shadow.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="src/assets/harrier-big-white.svg"
+    />
   </head>
   <body>
     <div id="app"></div>
