chore: combing through code to remove subdir path and ensuring gh-pages serves from root
Co-authored-by: Jesse Kercheval <jessekerch@users.noreply.github.com>
Co-authored-by: Shane Ziegler <shaneziegler@users.noreply.github.com>
Co-authored-by: Wook Kim <wook2000@users.noreply.github.com>

--- a/public/404.html
+++ b/public/404.html
@@ -6,7 +6,7 @@
     <title>404 Not Found</title>
     <script type="text/javascript">
       // Redirect all 404 errors to the root index.html for React Router to handle routing
-      window.location.replace(window.location.origin + "/harrier-site/");
+      window.location.replace(window.location.origin + "/");
     </script>
   </head>
   <body>
