--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <title>404 Not Found</title>
     <script type="text/javascript">
       // Redirect all 404 errors to the root index.html for React Router to handle routing
-      window.location.replace(window.location.origin + "/harrier-site/");
+      window.location.replace(window.location.origin + "/");
     </script>
   </head>
   <body>
